--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/1.prepare-server.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/1.prepare-server.md
@@ -2,10 +2,13 @@
 
 OceanBase 数据库集群高可用和容灾时至少由三个节点组成，每个节点对应一个 observer 进程，不同节点上的多个 observer 进程组成一个集群对外提供服务。
 
->**说明**
->
->* 如果需要 OCP 管控服务提供高可用能力，则需要 3 台管控服务器进行三节点部署，并提供负载均衡软件或者硬件，如 F5、SLB，或者使用 OceanBase 提供的 NLB 软负载组件。
->* 在最小化部署 OceanBase 4.0.0 时，需要 1 台 OBServer 服务器安装 OceanBase 集群和 1 台单独的服务器安装 OCP 用于管理 OceanBase 集群。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <ul>
+    <li>如果需要 OCP 管控服务提供高可用能力，则需要 3 台管控服务器进行三节点部署，并提供负载均衡软件或者硬件，如 F5、SLB，或者使用 OceanBase 提供的 NLB 软负载组件。</li>
+    <li>在最小化部署 OceanBase 4.0.0 时，需要 1 台 OBServer 服务器安装 OceanBase 集群和 1 台单独的服务器安装 OCP 用于管理 OceanBase 集群。</li>
+    </ul>
+  </main>
 
 服务器应满足的最低配置要求如下表所示：
 
