--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/2.preparations-before-deployment/2.server-configuration.md
@@ -16,9 +16,10 @@
 | 浪潮 Inspur kos           | 5.8        | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
 | CentOS / Red Hat Enterprise Linux | 7.2 及以上 <blockquote><b>说明</b></br>暂不支持 CentOS 8.X。</blockquote>  | x86_64（包括海光），ARM_64（鲲鹏、飞腾） |
 
-> **说明**
->
-> 操作系统需要配置网络和软件管理器（ yum 或 zypper 源）。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>操作系统需要配置网络和软件管理器（ yum 或 zypper 源）。</p>
+  </main>
 
 ## BIOS设置
 
@@ -58,9 +59,10 @@ BIOS 需要配置以下选项：
 
 * Energy performance：开启最大 performance
 
-> **说明**
->
-> 不同的服务器修改 BIOS 的方式不同，具体操作请参见服务器操作手册。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>不同的服务器修改 BIOS 的方式不同，具体操作请参见服务器操作手册。</p>
+  </main>
 
 ### ARM 环境部署建议
 
@@ -102,13 +104,11 @@ BIOS 需要配置以下选项：
   |-----------|------------------------------------------------------|-----------------|---------|
   | /data/oms | 400 GB，取决于同步对象的大小、同步作业个数、同步对象 DML 操作的频率和 Store 保留的时间 | OMS Store 组件数据盘 | 建议 ext4 |
 
-> **说明**
->
-> 建议根目录不小于 50 GB，不建议单独挂载 /opt 和 /var 目录。如果使用 LVM，建议创建时使用条带化参数。示例如下：
->
-> ```shell
-> lvcreate -n data -L 3000G obvg --stripes=3 --stripesize=128
-> ```
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>建议根目录不小于 50 GB，不建议单独挂载 /opt 和 /var 目录。如果使用 LVM，建议创建时使用条带化参数。示例如下：</p>
+    <p><code></code><code>shell lvcreate -n data -L 3000G obvg --stripes=3 --stripesize=128 &lt;code&gt;&lt;/code&gt;</code></p>
+  </main>
 
 ## 网卡设置
 
