--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md
@@ -81,9 +81,10 @@
 
 5. 用 `docker images` 命令获取 OAT 镜像的标签。
 
-   > **说明**
-   >
-   > 以下命令仅适用于本地只加载了一个 OAT 安装包的情况。对于装载多个安装包的情况，可以通过 `docker images` 查看显示内容，并使用冒号（:）连接前两列的内容。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>以下命令仅适用于本地只加载了一个 OAT 安装包的情况。对于装载多个安装包的情况，可以通过 <code>docker images</code> 查看显示内容，并使用冒号（:）连接前两列的内容。</p>
+  </main>
 
    ```shell
    oat_image=`docker images | grep oat | awk '{printf $1":"$2"\n"}'`
