--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/1.add-observer-machine-to-the-ocp-resource-pool.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/1.add-observer-machine-to-the-ocp-resource-pool.md
@@ -2,17 +2,19 @@
 
 部署 OceanBase 集群前，需要将 OBServer 机器添加到 OCP 资源池。
 
->**说明**
->
->本节以 OCP V4.0.0 版本为例提供操作指导。不同 OCP 版本的操作界面可能不同，请以实际界面为准。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>本节以 OCP V4.0.0 版本为例提供操作指导。不同 OCP 版本的操作界面可能不同，请以实际界面为准。</p>
+  </main>
 
 ## 操作步骤
 
 1. 在浏览器中输入 http://\< *OCP 服务器的 IP 地址* \>:8080，使用 admin 账号登录 OCP。
 
-   > **说明**
-   >
-   > 请联系 OceanBase 售后支持获取 admin 账号的默认密码。为保证账号安全，首次登录后请及时修改密码。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>请联系 OceanBase 售后支持获取 admin 账号的默认密码。为保证账号安全，首次登录后请及时修改密码。</p>
+  </main>
 
 2. 在左侧导航栏上，选择 **主机**。
 
