--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/1.view-available-resources-of-business-tenant.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/1.view-available-resources-of-business-tenant.md
@@ -4,9 +4,10 @@
 
 本节主要介绍通过 OCP 查看租户可用资源的方法。
 
->**说明**
->
->本节以 OCP V4.0.0 版本为例提供操作指导。不同 OCP 版本的操作界面可能不同，请以实际界面为准。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>本节以 OCP V4.0.0 版本为例提供操作指导。不同 OCP 版本的操作界面可能不同，请以实际界面为准。</p>
+  </main>
 
 ## 操作步骤
 
