--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/6.deploy-odc/2.deploy-odc.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/6.deploy-odc/2.deploy-odc.md
@@ -2,9 +2,10 @@
 
 本文将介绍如何使用 OAT 安装 ODC。
 
->**说明**
->
->本节以 OAT V4.0.0 版本为例提供操作指导。不同 OAT 版本的操作界面可能不同，请以实际界面为准。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>本节以 OAT V4.0.0 版本为例提供操作指导。不同 OAT 版本的操作界面可能不同，请以实际界面为准。</p>
+  </main>
 
 ## 前提条件
 
