--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/6.deploy-odc/3.post-deployment-check.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/6.deploy-odc/3.post-deployment-check.md
@@ -2,9 +2,10 @@
 
 ODC 部署完成后，您可以登录 ODC 进行部署后检查。
 
->**说明**
->
->本节以 ODC V4.0.0 版本为例提供操作指导。不同 ODC 版本的操作界面可能不同，请以实际界面为准。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>本节以 ODC V4.0.0 版本为例提供操作指导。不同 ODC 版本的操作界面可能不同，请以实际界面为准。</p>
+  </main>
 
 ## 访问 ODC
 
@@ -14,8 +15,9 @@ ODC 部署完成后，您可以登录 ODC 进行部署后检查。
 
 2. 在弹出的登录页面，使用默认账号 `admin` 账号登录。
 
-   >**说明**
-   >
-   >请联系 OceanBase 售后支持获取 admin 账号的默认密码。为保证账号安全，首次登录后请及时修改密码。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>请联系 OceanBase 售后支持获取 admin 账号的默认密码。为保证账号安全，首次登录后请及时修改密码。</p>
+  </main>
 
    ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OAT/deploy-odc/5%E7%99%BB%E5%BD%95%E7%95%8C%E9%9D%A2.png)
