--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/3.start-deployment.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/3.start-deployment.md
@@ -2,9 +2,10 @@
 
 在生成配置完成后，您可以通过 oat-cli 部署 OCP。
 
-> **说明**
->
-> 对于三节点部署，在一台服务器上执行安装命令后，oat-cli 会根据上一步生成配置文件中提供的 IP 地址与连接信息，自动将 OCP 安装到三台服务器上。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>对于三节点部署，在一台服务器上执行安装命令后，oat-cli 会根据上一步生成配置文件中提供的 IP 地址与连接信息，自动将 OCP 安装到三台服务器上。</p>
+  </main>
 
 ## 安装 OCP
 
@@ -46,9 +47,10 @@
    bash install.sh -i 1-8
    ```
 
-   > **说明**
-   >
-   > 在一台服务器上执行安装命令后，安装脚本会根据配置文件中提供的 IP 地址与连接信息，自动将 OCP 安装到三台服务器上。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>在一台服务器上执行安装命令后，安装脚本会根据配置文件中提供的 IP 地址与连接信息，自动将 OCP 安装到三台服务器上。</p>
+  </main>
 
 ## 异常处理
 
