--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-three-oceanbase-replica-clusters.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-three-oceanbase-replica-clusters.md
@@ -25,9 +25,10 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
    [root@xxx $rpm_dir]# rpm -ivh $rpm_name
    ```
 
-   > **说明**
-   >
-   > OceanBase 数据库软件会安装在目录 `/home/admin/oceanbase` 下。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>OceanBase 数据库软件会安装在目录 <code>/home/admin/oceanbase</code> 下。</p>
+  </main>
 
    示例如下：
 
@@ -104,9 +105,10 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
    -bash-4.2$ for t in {clog,etc2,ilog,oob_clog};do ln -s /data/log1/obdemo/$t /home/admin/oceanbase/store/obdemo/$t; done
    ```
 
-   > **说明**
-   >
-   > `obdemo` 是以集群名称创建的目录，可自定义，在启动进程时会用到。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p><code>obdemo</code> 是以集群名称创建的目录，可自定义，在启动进程时会用到。</p>
+  </main>
 
    检查结果：
 
@@ -129,17 +131,19 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
 
 ### 步骤三：初始化 OceanBase 集群
 
-> **说明**
->
-> 示例 IP 做了脱敏处理，这不是安装需求。在部署时应根据自己机器真实 IP 填写。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>示例 IP 做了脱敏处理，这不是安装需求。在部署时应根据自己机器真实 IP 填写。</p>
+  </main>
 
 1. 启动节点 observer 进程。
 
    在每个节点的 `admin` 用户下，启动 observer 进程。
 
-   > **注意**
-   >
-   > 三副本下，每个节点启动参数并不完全相同。启动 observer 时只需指定 RootService 所在的 3 台（或者多台）机器，不需要在创建集群时指定所有机器；集群创建完成后可以添加新的机器。
+  <main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>三副本下，每个节点启动参数并不完全相同。启动 observer 时只需指定 RootService 所在的 3 台（或者多台）机器，不需要在创建集群时指定所有机器；集群创建完成后可以添加新的机器。</p>
+  </main>
 
    参数里指定数据文件的大小、内存的大小，以方便个别环境资源不足想精确控制observer对资源的占用。具体说明如下：
 
@@ -237,9 +241,10 @@ OceanBase 集群三副本，至少要有三台主机，分为三个 Zone。Ocean
    Query OK, 0 rows affected
    ```
 
-   > **注意**
-   >
-   > 如果这一步失败报错了，其原因很可能就是三节点 observer 进程启动参数有不对、observer 相关目录权限不对、日志目录空间不足一定比例（跟数据目录合用了大目录，空间被数据目录占用了）、三节点时间不同步、节点内存资源不足等。请先排查这些问题点后，然后清理 OceanBase 目录从头开始（请参见 **清理 OceanBase 目录（第一次不用）** ）。
+  <main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>如果这一步失败报错了，其原因很可能就是三节点 observer 进程启动参数有不对、observer 相关目录权限不对、日志目录空间不足一定比例（跟数据目录合用了大目录，空间被数据目录占用了）、三节点时间不同步、节点内存资源不足等。请先排查这些问题点后，然后清理 OceanBase 目录从头开始（请参见 <strong>清理 OceanBase 目录（第一次不用）</strong> ）。</p>
+  </main>
 
 3. 验证集群初始化成功。
 
