--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/1.data-migration-between-tables.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/1.data-migration-between-tables.md
@@ -29,9 +29,10 @@ FROM source_table_name
 
 通过 `MERGE INTO ... INSERT ...` 语句进行表与表之间数据迁移，语法详细信息，请参见 [MERGE](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/3.merge-of-oracle-mode.md)。
 
->**功能适用性**
->
->`MERGE` 语句暂时只支持 OceanBase 数据库 Oracle 模式。
+  <main id="notice" >
+    <h4>功能适用性</h4>
+    <p><code>MERGE</code> 语句暂时只支持 OceanBase 数据库 Oracle 模式。</p>
+  </main>
 
 ```sql
 MERGE INTO target_table_name 
