--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/1.access-control-oracle-mode/4.indirect-authority-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/1.access-control-oracle-mode/4.indirect-authority-of-oracle-mode.md
@@ -64,9 +64,10 @@ Query OK, 0 rows affected
 
 此外，您也可以向 `PUBLIC` 角色中添加权限，SQL 语句如下：
 
->**注意**
->
->为了数据库安全，OceanBase 数据库建议您根据自身业务需求来合理授权，请勿随意将该角色赋予用户。
+  <main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>为了数据库安全，OceanBase 数据库建议您根据自身业务需求来合理授权，请勿随意将该角色赋予用户。</p>
+  </main>
 
 ```sql
 obclient> GRANT [privilege_list] TO PUBLIC;
