--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/2.audit-open.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/2.audit-open.md
@@ -10,9 +10,10 @@
    obclient> ALTER USER ORAAUDITOR ACCOUNT UNLOCK;
    ```
 
-      > **说明**
-      >
-      > OceanBase 数据库默认创建了 `ORAAUDITOR` 用户。该用户默认处于锁定状态，在使用审计前需要启用该用户。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>OceanBase 数据库默认创建了 <code>ORAAUDITOR</code> 用户。该用户默认处于锁定状态，在使用审计前需要启用该用户。</p>
+  </main>
 
    为了便于 ORAAUDITOR 用户直接修改相关配置项的值，可通过 GRANT 语句给 ORAAUDITOR 用户授予 ALTER SYSTEM 权限。
 
@@ -41,9 +42,11 @@
 
    有关 `audit_trail` 配置项的详细信息，请参见 [audit_trail](../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/2.audit_trail.md) 。
 
-      > **说明**
-      >
-      > 审计记录支持写入内部表和写入本地磁盘文件两种方式：
-      >
-      > * 写入磁盘文件：通过异步写的方式记录在 `<安装目录>/audit/` 下，默认在 `/home/admin/oceanbase/audit/observer_xx_xxxxxx.aud`。
-      > * 写入内部表：审计信息直接写入系统表。内部表 `__all_tenant_security_audit_record`，存放审计记录；内部表 `__all_virtual_audit_operation` 或 `__all_virtual_audit_action`，存放审计相关 `ID` 和 `Name` 的映射。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>审计记录支持写入内部表和写入本地磁盘文件两种方式：</p>
+    <ul>
+    <li>写入磁盘文件：通过异步写的方式记录在 <code>&lt;安装目录&gt;/audit/</code> 下，默认在 <code>/home/admin/oceanbase/audit/observer_xx_xxxxxx.aud</code>。</li>
+    <li>写入内部表：审计信息直接写入系统表。内部表 <code>__all_tenant_security_audit_record</code>，存放审计记录；内部表 <code>__all_virtual_audit_operation</code> 或 <code>__all_virtual_audit_action</code>，存放审计相关 <code>ID</code> 和 <code>Name</code> 的映射。</li>
+    </ul>
+  </main>
