--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/6.audit-records.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/6.audit-records.md
@@ -27,9 +27,10 @@
   PROXY CLIENT ADDRESS:[13] 'xx.xx.xx.xx'
   ```
 
-   > **说明**
-   > 
-   > 文件过长时，会自动截断。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>文件过长时，会自动截断。</p>
+  </main>
   
 * 查看内部表中的审计记录。
 
