--- a/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/7.reference/2.administrator-guide/5.backup-and-recovery/2.backup-and-restoration-management/4.data-backup/1.preparation-before-data-backup.md
@@ -6,9 +6,10 @@
 
 1. 用户租户的租户管理员登录数据库。
 
-   >**说明**
-   >
-   >MySQL 模式的管理员用户为 `root` 用户，Oracle 模式的管理员用户为 `SYS` 用户。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>MySQL 模式的管理员用户为 <code>root</code> 用户，Oracle 模式的管理员用户为 <code>SYS</code> 用户。</p>
+  </main>
 
 2. 配置备份目的端。
 
@@ -40,9 +41,10 @@
       obclient> ALTER SYSTEM SET data_backup_dest='file:///data/nfs/backup/data';
       ```
 
-      >**说明**
-      >
-      >如果是通过 `sys` 租户配置备份目的端，则需要在语句中指定待发起备份的用户租户名（不能指定 `sys` 租户），例如：`ALTER SYSTEM SET data_backup_dest='file:///data/nfs/backup/data' TENANT = mysql_tenant;`。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>如果是通过 <code>sys</code> 租户配置备份目的端，则需要在语句中指定待发起备份的用户租户名（不能指定 <code>sys</code> 租户），例如：<code>ALTER SYSTEM SET data_backup_dest='file:///data/nfs/backup/data' TENANT = mysql_tenant;</code>。</p>
+  </main>
 
    * 阿里云 OSS
 
