--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/1.deployment-instructions.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/1.deployment-instructions.md
@@ -22,9 +22,10 @@ OCP 当前支持 OceanBase 数据库的所有主流版本，不仅提供对 Ocea
 
 依赖少，无需依赖负载均衡服务。
 
->**说明**
->
->单节点部署常见于对可用性要求不高或快速验证的场景。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>单节点部署常见于对可用性要求不高或快速验证的场景。</p>
+  </main>
 
 ## 高可用部署
 
@@ -32,6 +33,7 @@ OCP 当前支持 OceanBase 数据库的所有主流版本，不仅提供对 Ocea
 
 高可用部署情况下，当少数主机或主机上的服务不可用时，整个系统仍然可用。
 
->**说明**
->
->高可用部署常见于生产环境，对系统可用性要求较高。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>高可用部署常见于生产环境，对系统可用性要求较高。</p>
+  </main>
