--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/4.deploy-obproxy/2.deploy-obproxy.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/4.deploy-obproxy/2.deploy-obproxy.md
@@ -2,9 +2,10 @@
 
 本节主要介绍使用 OCP 创建 OBProxy 集群。
 
->**说明**
->
->本节以 OCP V4.0.0 版本为例提供操作指导。不同 OCP 版本的操作界面可能不同，请以实际界面为准。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>本节以 OCP V4.0.0 版本为例提供操作指导。不同 OCP 版本的操作界面可能不同，请以实际界面为准。</p>
+  </main>
 
 ## 前提条件
 
