--- a/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/4.post-deployment-check.md
+++ b/zh-CN/4.deploy-oceanbase/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/4.post-deployment-check.md
@@ -2,9 +2,10 @@
 
 OCP 部署完成后，您可以登录 OCP 进行部署后检查。
 
->**说明**
->
->本节以 OCP V4.0.0 版本为例提供操作指导。不同 OCP 版本的操作界面可能不同，请以实际界面为准。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>本节以 OCP V4.0.0 版本为例提供操作指导。不同 OCP 版本的操作界面可能不同，请以实际界面为准。</p>
+  </main>
 
 ## 访问 OCP
 
@@ -16,7 +17,10 @@ OCP 部署完成后，您可以登录 OCP 进行部署后检查。
 
    ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2361540561/p432067.png)
 
-   > **说明**
-   >
-   > * 如果需要通过域名访问，则需要配置本机的域名解析服务。
-   > * 请联系 OceanBase 售后支持获取 admin 账号的默认密码。为保证账号安全，首次登录后请及时修改密码。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <ul>
+    <li>如果需要通过域名访问，则需要配置本机的域名解析服务。</li>
+    <li>请联系 OceanBase 售后支持获取 admin 账号的默认密码。为保证账号安全，首次登录后请及时修改密码。</li>
+    </ul>
+  </main>
