--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
@@ -4,9 +4,10 @@
 
 本文将主要介绍使用 SQL 语句实现资源单元的迁移。
 
->**功能适用性**
->
->`ALTER SYSTEM MIGRATE UNIT` 语句仅支持在 sys 租户执行。
+  <main id="notice" >
+    <h4>功能适用性</h4>
+    <p><code>ALTER SYSTEM MIGRATE UNIT</code> 语句仅支持在 sys 租户执行。</p>
+  </main>
 
 ## 语法
 
@@ -24,9 +25,10 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id
 | unit_id | Unit 编号。                       |
 | ip_port | 将 Unit 迁移到的目标 Server 地址。 |
 
->**说明**
->
->可以通过 `ALTER SYSTEM CANCEL MIGRATE UNIT` 语句取消资源单元迁移。取消资源单元迁移详细信息，请参见 [CANCEL MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/4.cancel-migrate-unit.md)。
+  <main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>可以通过 <code>ALTER SYSTEM CANCEL MIGRATE UNIT</code> 语句取消资源单元迁移。取消资源单元迁移详细信息，请参见 <a href="../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/4.cancel-migrate-unit.md">CANCEL MIGRATE UNIT</a>。</p>
+  </main>
 
 ## 示例
 
