--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md
@@ -79,9 +79,10 @@ OceanBase 数据库的 MySQL 模式通过租户级配置项 `connection_control_
 
 5. 执行以下 SQL 语句，解锁用户。
 
-   >**注意**
-   >
-   >解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 `ALTER USER` 权限。查看用户权限和授权的相关操作请参见 [查看用户权限](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md) 和 [修改用户权限](../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
+  <main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 <code>ALTER USER</code> 权限。查看用户权限和授权的相关操作请参见 <a href="../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md">查看用户权限</a> 和 <a href="../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md">修改用户权限</a>。</p>
+  </main>
 
    ```sql
    obclient> ALTER USER test ACCOUNT UNLOCK;
