--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/1.access-control-oracle-mode/3.role-of-oracle.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/1.access-control-oracle-mode/3.role-of-oracle.md
@@ -22,6 +22,7 @@
 
   您可以通过 `DBA_SYS_PRIVS` 字典视图查看该角色所包含的权限。
   
-  >**注意**
-  >
-  >为了数据库安全，OceanBase 数据库建议您根据自身业务需求来合理授权，请勿随意将该角色赋予用户。
+  <main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>为了数据库安全，OceanBase 数据库建议您根据自身业务需求来合理授权，请勿随意将该角色赋予用户。</p>
+  </main>
