提交集群配置项的内容

--- a/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/3.restart-a-node.md
@@ -1,19 +1,11 @@
 # 重启节点
 
-重启是常用运维动作之一。
+重启是常用运维动作之一。重启节点可以解决对机器进行短暂维修的场景（节点下线时间需要在 `server_permanent_offline_time` 以内，否则会导致节点被永久下线）。如果长时间维修，需要走机器替换流程，有关机器替换的详细操作请参见 [替换节点](7.replace-a-node.md)。
 
-重启节点可以解决以下问题：
-
-* 解决 observer 进程的一部分问题
-
-* 对机器进行短暂维修
-
-  对机器进行短暂维修时，节点下线时间需要在 `server_permanent_offline_time` 以内，否则会导致节点被永久下线。如果长时间维修，需要走机器替换流程，有关机器替换的详细操作请参见 [替换节点](7.replace-a-node.md)。
-
-  <main id="notice" type='explain'>
-            <h4>说明</h4>
-            <p>集群级配置项 <code>server_permanent_offline_time</code> 用于设置节点心跳中断的时间阈值，即节点心跳中断多久后认为其被永久下线，永久下线的节点上的数据副本需要被自动补足。默认为 3600s。有关该配置项的更多详细信息，请参见 <a href="../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/190.server_permanent_offline_time-1-2-3.md">server_permanent_offline_time</a>。</p>
-  </main>
+<main id="notice" type='explain'>
+<h4>说明</h4>
+<p>集群级配置项 <code>server_permanent_offline_time</code> 用于设置节点心跳中断的时间阈值，即节点心跳中断多久后认为其被永久下线，永久下线的节点上的数据副本需要被自动补足。默认为 3600s。有关该配置项的更多详细信息，请参见 <a href="../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/190.server_permanent_offline_time-1-2-3.md">server_permanent_offline_time</a>。</p>
+</main>
 
 ## 操作步骤
 
