--- a/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/12.view-cluster-parameters.md
@@ -10,11 +10,11 @@
 
 * 通过 `GV$OB_PARAMETERS` 视图查看集群配置项
 
-  与 `SHOW` 语句一样，可以查看集群中除隐藏配置项（`_xx_xx` 格式的配置项）以外的所有配置项及其所有属性描述。
+  与 `SHOW` 语句不同，通过 `GV$OB_PARAMETERS` 视图可以查看集群中的所有配置项（含隐藏配置项，即 `_xx_xx` 格式的配置项）及其所有属性描述。
 
 * 通过配置文件 `observer.config.bin` 查看集群配置项
 
-   该方式查看的配置项中仅包含了单台机器的配置项，集群中每台机器的配置项不完全一致。此外，通过该方式查看到的配置项信息仅包含了配置项名和配置项值，无各配置项的属性描述。不推荐使用该方式查看配置项，建议使用 `SHOW` 语句或 `GV$OB_PARAMETERS` 视图查看集群级配置项。
+   该方式查看的配置项中仅包含了单台服务器的配置项，集群中每台服务器的配置项不完全一致。此外，通过该方式查看到的配置项信息仅包含了配置项名和配置项值，无各配置项的属性描述。不推荐使用该方式查看配置项，建议使用 `SHOW` 语句或 `GV$OB_PARAMETERS` 视图查看集群级配置项。
 
 有关配置项的更多说明，请参见 [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)。
 
@@ -40,7 +40,7 @@
    obclient [xxx]> SHOW PARAMETERS [SHOW_PARAM_OPTS];
    ```
 
-   其中，[SHOW_PARAM_OPTS] ：可指定为 `[LIKE 'pattern' | WHERE expr]`，`WHERE expr` 中可以指定的列属性与 `SHOW PARAMETERS` 返回结果中的列属性一致。
+   其中，`[SHOW_PARAM_OPTS]` 可指定为 `[LIKE 'pattern' | WHERE expr]`，`WHERE expr` 中可以指定的列属性与 `SHOW PARAMETERS` 返回结果中的列属性一致。
 
    示例如下：
 
@@ -60,11 +60,11 @@
    |------------|-----------------------------------|
    | zone       | 所在的 Zone。                      |
    | svr_type   | 服务器类型。                        |
-   | svr_ip     | 机器 IP。                          |
-   | svr_port   | 机器的端口。                        |
+   | svr_ip     | 服务器 IP。                          |
+   | svr_port   | 服务器的端口。                        |
    | name       | 配置项名。                         |
    | data_type  | 配置项的数据类型，包括 `STRING`、`CAPACITY` 等。              |
-   | value      | 配置项的值。 </br>**说明**  </br>由于在修改配置项值时，支持修改指定 Zone 或 Server 的配置项值，故不同 Zone 或 Server 对应的配置项的值可能不同。  |
+   | value      | 配置项的值。 <blockquote>**说明**  </br>由于在修改配置项值时，支持修改指定 Zone 或 Server 的配置项值，故不同 Zone 或 Server 对应的配置项的值可能不同。</blockquote>  |
    | info       | 配置项的说明信息。           |
    | section    | 配置项所属的分类： <ul><li>`SSTABLE`：表示 SSTable 相关的配置项。</li> <li>`OBSERVER`：表示 OBServer 相关的配置项。</li>  <li>`ROOT_SERVICE`：表示 RootService 相关的配置项。</li> <li>`TENANT`：表示租户相关的配置项。</li> <li>`TRANS`：表示事务相关的配置项。</li> <li>`LOAD_BALANCE`：表示负载均衡相关的配置项。</li>  <li>`DAILY_MERGE`：表示合并相关的配置项。</li> <li>`CLOG`：表示 Clog 相关的配置项。</li>   <li>`LOCATION_CACHE`：表示 Location Cache 相关的配置项。</li> <li>`CACHE`：表示缓存相关的配置项。</li>   <li>`RPC`：表示 RPC 相关的配置项。</li> <li>`OBPROXY`：表示 OBProxy 相关的配置项。</li></ul>    |
    | scope      | 配置项范围属性： <ul><li>`TENANT`：表示该配置项为租户级别的配置项</li> <li>`CLUSTER`：表示该配置项为集群级别的配置项</li></ul>         |
@@ -141,14 +141,8 @@
 
 关于集群配置项的更多内容，请参见以下信息：
 
+* [集群配置项](../2.cluster-configuration-items.md)
+
 * [修改集群配置项](13.modify-cluster-parameters.md)
-
-* [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)
-
-* [系统变量概述](../../../7.reference/5.system-reference/2.system-variable-for-mysql/1.overview-of-system-variables-3.m)
-
-* [设置参数](../../../7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/2.set-parameters.md)
-
-* [设置变量](../../../7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/3.set-variables.md)
 
 有关每个配置项的详细介绍，请参见 《参考指南》 的 **系统参考** 章节。
