--- a/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/13.modify-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/3.common-cluster-operations/13.modify-cluster-parameters.md
@@ -37,7 +37,7 @@
    3 rows in set
    ```
 
-   更多集群配置项的查看方法，请参见 [查看集群配置项](11.view-cluster-parameters.md)。
+   更多集群配置项的查看方法，请参见 [查看集群配置项](12.view-cluster-parameters.md)。
 
 3. 执行以下命令，修改集群配置项的值。
 
@@ -53,7 +53,7 @@
    相关参数说明如下：
 
    * `expression` 用于指定修改后该配置项的值。
-   
+
    * `SCOPE` 用于指定本次配置项修改的生效范围，默认值为 `BOTH`。其中：
 
      * `MEMORY`：表示仅修改内存中的配置项，修改立即生效，且本修改在 OBServer 重启以后会失效（当前暂无配置项支持这种方式）。
@@ -65,12 +65,12 @@
    * `SERVER` 表示指定集群中要修改的 Server，`ZONE` 表示指定集群中要修改的 Zone。`ALTER SYSTEM` 语句不能同时指定 Zone 和 Server。并且在指定 Zone 时，仅支持指定一个 Zone；指定 Server 时，仅支持指定一个 Server。如果修改集群级配置项时，不指定 Zone 也不指定 Server，则表示该修改在整个集群内生效。
 
    在修改集群配置项时，集群级别的配置项不能通过用户租户设置，也不可以通过系统租户（即 `sys` 租户） 指定为用户租户设置。
-   
+
    例如，执行 `ALTER SYSTEM SET memory_limit='100G' TENANT='test_tenant'` 语句将导致报错，因为 `memory_limit` 是集群级别的配置项。确认一个配置项为集群级别还是租户级别，可根据 `SHOW PARAMETERS LIKE 'parameter_name';` 语句执行结果中的 `scope` 列对应的值来判断：
 
     * `scope` 值为 `CLUSTER` 则表示为集群级别的配置项。
 
-    * `scope` 值为 `TENANT `则表示为租户级别的配置项。
+    * `scope` 值为 `TENANT`则表示为租户级别的配置项。
 
     示例：
 
@@ -102,14 +102,8 @@
 
 关于集群配置项的更多内容，请参见以下信息：
 
+* [集群配置项](../2.cluster-configuration-items.md)
+
 * [查看集群配置项](12.view-cluster-parameters.md)
-
-* [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)
-
-* [系统变量概述](../../../7.reference/5.system-reference/2.system-variable-for-mysql/1.overview-of-system-variables-3.m)
-
-* [设置参数](../../../7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/2.set-parameters.md)
-
-* [设置变量](../../../7.reference/2.administrator-guide/2.basic-database-management/2.configuration-management/3.set-variables.md)
 
 有关每个配置项的详细介绍，请参见 《参考指南》 的 **系统参考** 章节。
