修改 3.built-in-functions.md

--- a/zh-CN/1.learn-more-about-oceanbase/3.compatibility-with-oracle/3.built-in-functions.md
+++ b/zh-CN/1.learn-more-about-oceanbase/3.compatibility-with-oracle/3.built-in-functions.md
@@ -203,7 +203,7 @@ Oracle 数据库中支持内建函数 257 个，OceanBase 数据库当前支持 
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p> 表示该函数既是聚合函数又是分析函数。</p>
+  <p> \*表示该函数既是聚合函数又是分析函数。</p>
 </main>
 
 ## 分析函数
