根据评审意见进行修改

--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/11.isolation-a-zone.md
@@ -1,8 +1,8 @@
 # 隔离 Zone
 
-为了实现 OceanBase 数据库的高级别容灾功能，我们引入了 Zone 的概念。Zone 是一个逻辑概念，一般是具有相似容灾属性的一组节点的组合。从物理层面来讲，一个 Zone 通常是一个独立的物理部署单元，可以是一个数据中心（IDC）或者云上的一个AZ（可用区），也可以是一个单独的机架（Rack）。通过将 OceanBase 集群部署于多个 Zone （通常至少3个 Zone ） ，实现单个 Zone 故障时的故障隔离及快速恢复。
+为了实现 OceanBase 数据库的高级别容灾功能，我们引入了 Zone 的概念。Zone 是一个逻辑概念，一般是具有相似容灾属性的一组节点的组合。从物理层面来讲，一个 Zone 通常是一个独立的物理部署单元，可以是一个数据中心（IDC）或者云上的一个AZ（可用区），也可以是一个单独的机架（Rack）。通过将 OceanBase 集群部署于多个 Zone （通常至少3个 Zone） ，实现单个 Zone 故障时的故障隔离及快速恢复。
 
-当需要进行 Zone 级容灾或者 Zone 级运维变更时，可以隔离 Zone。隔离后，新的读写请求不会路由到该 Zone 内的节点上，从而可以隔离故障或者安全的执行运维动作。
+当需要进行 Zone 级容灾或者 Zone 级运维变更时，可以隔离 Zone。隔离后，新的读写请求不会路由到该 Zone 内的节点上，从而可以隔离故障或者安全地执行运维动作。
 
 * 故障隔离场景：例如多机房部署架构下，某机房内有交换机异常，此时部分节点出现丢包、重传，甚至无主选举。为了快速恢复，可以直接隔离该机房对应的 Zone。
 
@@ -24,7 +24,7 @@
 
 对于 `STOP ZONE` 命令，假设被执行 `STOP ZONE` 命令的节点为 zone1，`STOP ZONE` 命令的内部执行逻辑如下：
 
-1. 检查是否有其他 Zone 被 Stop。如果存在，则不允许对 zone1 执行 Stop Zone 操作。
+1. 检查是否有其他 Zone 正在被执行 Stop Zone 操作。如果存在，则不允许对 zone1 执行 Stop Zone 操作。
 
 2. 以日志流为单位，检查是否存在无主的日志流。如果存在，则不允许对 zone1 执行 Stop Zone 操作。
 
@@ -155,11 +155,11 @@
 
 需要强调的是：
 
-* 任何场景下都应该尽量使用 Stop Zone 命令来执行隔离操作，成功执行后可以安全的执行任何运维动作或者应急动作，甚至 kill observer 进程。
+* 任何场景下都应该尽量使用 Stop Zone 命令来执行隔离操作，成功执行后可以安全地执行任何运维动作或者应急动作，甚至 kill observer 进程。
 
 * Force Stop Zone 和 Isolate Zone 是弱化版本的隔离命令。适用于故障应急场景下 Stop Zone 执行时前置检查不通过的情况，不承诺能够安全的 kill observer 进程。不适用于运维变更场景。
 
-* 隔离 Zone 只是将用户流量从该 Zone 切走，避免用户流量受到该 Zone 内异常的影响。不会改变 Paxos 投票成员的数量，需要避免隔离期间的二次故障，做好相应应急预案。如果需要长时间隔离，需要执行替换 Zone 的操作。
+* 隔离 Zone 只是将用户流量从该 Zone 切走，避免用户流量受到该 Zone 内异常的影响。不会改变 Paxos 投票成员的数量，但是需要避免隔离期间的二次故障，做好相应应急预案。如果需要长时间隔离，需要执行替换 Zone 的操作。
 
 ## 相关文档
 
