--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -63,6 +63,10 @@
    obclient [(none)]> ALTER SYSTEM  MINOR FREEZE SERVER = ('172.xx.xx.xx:2882');
    ```
 
+   执行转储操作后，需要等待转储结束方可执行下一步操作，查看转储进度的相关操作请参见 [查看转储信息](../../../7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management-1/4.view-dump-information.md)。
+
+   更多转储相关的详细介绍，请参见 [转储](../../../7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/2.dump.md)。
+
 4. 停止 observer 进程。
 
    1. 使用 `admin` 用户登录待停止进程的节点所在的机器。
@@ -72,6 +76,8 @@
        ```bash
        [admin@xxx /]$ cd /home/admin/oceanbase/bin
        ```
+
+      更多 OceanBase 数据库软件的安装目录的详细介绍信息，请参见 [OBServer 安装目录结构](../../../7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/1.observer-installation-directory-structure.md)。
 
    3. 执行以下命令，查看并获取节点的进程 ID。
 
@@ -117,6 +123,8 @@
       ```bash
       [admin@xxx oceanbase]$ cd /home/admin/oceanbase  &&  ./bin/observer
       ```
+
+      更多 OceanBase 数据库软件的安装目录的详细介绍信息，请参见 [OBServer 安装目录结构](../../../7.reference/1.oceanbase-database-concepts/12.observer-node-architecture/1.observer-installation-directory-structure.md)。
 
 7. 执行以下命令，启动节点服务。
 
