--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
@@ -1,16 +1,16 @@
-# 增加节点
+# 添加节点
 
-当集群中的资源不够时，您可以通过增加节点来扩容。
+当集群中的资源不够时，您可以通过添加节点来扩容。
 
 ## 前提条件
 
 * 请确认待增加的所有 OBServer 服务器已完成相关配置，具体操作可参见 [服务器配置](../../../4.deploy/3.preparations-before-deployment-1/2.server-configuration.md) 章节和 [部署环境配置](../../../4.deploy/6.command-line-deployment/1.configure-a-deployment-environment-2/1.install-oat-cli.md) 章节。
 
-* 增加节点前需要为所有 OBServer 服务器安装数据库软件，您可以从 OceanBase 官网的下载中心下载对应版本的 OceanBase 数据库软件安装包，或者从 OceanBase 技术支持人员处获取。
+* 添加节点前需要为所有 OBServer 服务器安装数据库软件，您可以从 OceanBase 官网的下载中心下载对应版本的 OceanBase 数据库软件安装包，或者从 OceanBase 技术支持人员处获取。
 
 ## 操作步骤
 
-1. （可选）如果需要增加 Zone 后再向该 Zone 中增加 OBServer 服务器，请确认已增加 Zone，增加 Zone 的操作请参见 [增加 Zone](5.add-a-zone.md)。
+1. （可选）如果需要添加 Zone 后再向该 Zone 中添加 OBServer 服务器，请确认已添加 Zone，添加 Zone 的操作请参见 [添加 Zone](5.add-a-zone.md)。
 
 2. 通过 `ssh` 登录到待添加的 OBServer 服务器，进行安装前检查。
 
@@ -35,11 +35,11 @@
       [root@xxx clonescripts]#  ntpdate $IP
       ```
 
-      其中，$IP 表示集群中其他节点的 IP 地址。
+      其中，`$IP` 表示集群中其他节点的 IP 地址。
 
 3. 通过 `ssh` 登录到待添加的 OBServer 服务器，安装 OceanBase 数据库的 RPM 包。
 
-   在增加节点前，需要为待增加的所有 OBServer 服务器安装数据库软件。
+   在添加节点前，需要为待添加的所有 OBServer 服务器安装数据库软件。
 
    命令如下：
 
@@ -51,7 +51,9 @@
 
    其中，`rpm_dir` 表示存放 RPM 包的目录；`$rpm_name` 表示 RPM 包的名称。
 
-4. 通常情况下，使用 `/data/1` 作为数据目录，`/data/log1` 作为日志目录。需要在待增加的 OBServer 服务器上创建 `/data/1` 和 `/data/log1` 目录，并将目录的拥有者（Owner）修改为 `admin`。
+4. 需要在待添加的 OBServer 服务器上创建 `/data/1` 和 `/data/log1` 目录，并将目录的拥有者（Owner）修改为 `admin`。
+
+   通常情况下，使用 `/data/1` 作为数据目录，`/data/log1` 作为日志目录。
 
    ```shell
    [root@xxx /]# mkdir -p /data/1 /data/log1
@@ -103,7 +105,7 @@
 
 6. 启动 observer 进程。
 
-   1. 使用 `admin` 用户登录到待增加的 OBServer 服务器上。
+   1. 使用 `admin` 用户登录到待添加的 OBServer 服务器上。
 
    2. 设置 `admin` 用户的 ulimit。
 
@@ -159,7 +161,7 @@
 
         * 配置项之间使用英文逗号（,）进行分割。
 
-        示例中，`memory_limit=100GB` 表示进程启动内存上限为 100 GB；`datafile_disk_percentage=85`表示数据盘的占用比率为 85%。
+        示例中，`memory_limit=100GB` 表示进程启动的内存上限为 100 GB；`datafile_disk_percentage=85` 表示数据盘的占用比率为 85%。
 
       示例如下：
 
