--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -95,6 +95,8 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
       obclient [(none)]> ALTER SYSTEM MIGRATE UNIT = 1012 DESTINATION = '172.xx.xx.xx:2882'; 
       ```
 
+      该命令可多次执行，如果手动迁移 Unit 失败，可以根据报错信息解决问题后再重新执行。
+
       更多关于 Unit 迁移的操作及说明，请参见 [副本迁移](暂时无法加链接)。
 
 3. 执行以下命令，删除节点。
@@ -119,7 +121,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
    obclient [(none)]> ALTER SYSTEM DELETE SERVER "172.xx.xx.xx:2882" zone='zone1'
    ```
 
-2. 待所有操作结束后，查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否删除成功。
+4. 待所有操作结束后，查询 `oceanbase.DBA_OB_SERVERS` 视图，确认节点是否删除成功。
 
    ```sql
    obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_SERVERS;
@@ -127,9 +129,11 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
 
    如果列表中已经查询不到该节点，则表示删除成功。如果列表中仍然有该节点，且该节点的状态为 `DELETING`，则表示该节点仍然在删除状态中。
 
+   对于未手动迁移 Unit 而是直接执行 Delete Server 操作的场景，可能会导致节点删除失败，确认节点删除失败后，可以参考 [后续操作](#后续操作) 进行处理。
+
 ## 后续操作
 
-对于未手动迁移 Unit 而是直接执行 Delete Server 操作的场景，由于 Unit 均衡过程中可能会发生资源不足，即同 Zone 中其他节点的剩余资源不足以容纳待删除节点上的 Unit，将会导致 Unit 迁移失败，从而使该节点持续在删除状态中。您可以通过 `/home/admin/oceanbase/log/rootservice.log` 查看 Unit 是否迁移失败。如果确认是 Unit 迁移失败，则需要执行 Cancel Delete Server 操作，然后向 Zone 内添加节点对集群扩容后再重新删除节点。通过向 Zone 内添加节点进行集群扩容的相关操作请参见 [添加节点](4.add-a-node.md)。
+对于未手动迁移 Unit 而是直接执行 Delete Server 操作的场景，由于 Unit 均衡过程中可能会发生资源不足，即同 Zone 中其他节点的剩余资源不足以容纳待删除节点上的 Unit，将会导致 Unit 迁移失败，从而使该节点持续在删除状态中。您可以通过 RootService 机器上的 `/home/admin/oceanbase/log/rootservice.log` 查看 Unit 是否迁移失败。如果确认是 Unit 迁移失败，则需要执行 Cancel Delete Server 操作，然后向 Zone 内添加节点对集群扩容后再重新删除节点。向 Zone 内添加节点的相关操作请参见 [添加节点](4.add-a-node.md)。
 
 Cancel Delete Server 的具体操作如下：
 
