--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -2,6 +2,14 @@
 
 当前节点异常或节点运维变更时，需要先隔离节点，将流量切到其他节点，以免业务受到影响。
 
+当节点异常或节点运维变更时，可以隔离节点。隔离后，新的读写请求不会路由到该节点上，从而可以隔离故障或者安全地执行运维动作。
+
+* 故障隔离场景：例如，多机房部署架构下，某机房内有交换机异常，此时个别节点出现丢包、重传，甚至无主选举。为了快速恢复，可以直接隔离该机房中的异常节点。
+
+* 运维变更场景：例如， OceanBase 集群升级时采用的轮转升级方案，首先隔离一个节点，将用户流量从该节点切到其他节点，然后执行升级动作。该节点升级完成后执行 Start 操作恢复流量，再依次升级其他节点，从而做到升级对用户透明。
+
+隔离节点，只是将用户流量从该节点切走，并没有改变 Paxos 投票成员的数量。如果是故障隔离场景，依然存在风险敞口，此时如果再发生一台机器故障，可能会破坏多数派节点并引起租户无主，适用于短时间隔离的场景，并且需要保持关注，提前做好二次故障的应急预案。如果短时间内恢复不了，可以采用替换节点的方式彻底去除隐患，替换节点的详细操作请参见 [替换节点](7.replace-a-node.md）。
+
 ## 背景信息
 
 隔离节点有以下三种方式：
@@ -138,6 +146,14 @@
       ```shell
       admin@xxx oceanbase]$ kill -9 103364
       ```
+
+需要强调的是：
+
+* 任何场景下都应该尽量使用 Stop Server 来执行隔离操作，成功执行后可以安全地执行任何运维动作或者应急动作，甚至 Kill observer 进程。
+
+* Force Stop Server 和 Isolate Server 是弱化版本的隔离命令。适用于故障应急场景下 Stop Server 执行时前置检查不通过的情况，不承诺能够安全的 Kill observer 进程。不适用于运维变更场景。
+
+* 隔离节点只是将用户流量从该节点切走，避免用户流量受到该节点异常的影响。不会改变 Paxos 投票成员的数量，但是需要避免隔离期间的二次故障，做好相应应急预案。如果需要长时间隔离，需要执行替换节点的操作，替换节点的详细操作请参见 [替换节点](7.replace-a-node.md）。
 
 ## 相关文档
 
