--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/7.replace-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/7.replace-a-node.md
@@ -76,7 +76,7 @@
 
       相关参数说明如下：
 
-      * `unit_id`：待迁移的 Unit 的 Unit_id。
+      * `unit_id`：待迁移的 Unit 的 unit_id。
 
       * `svr_ip:svr_port`：新节点的 IP 地址和 RPC 端口号，端口号默认为 2882。
 
