--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.delete-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.delete-a-zone.md
@@ -1,10 +1,28 @@
 # 删除 Zone
 
-删除 Zone 通常用于集群缩容的场景中。通过删除 Zone 来进行缩容的详细操作请参见 [在集群中减少 Zone](../../../7.reference/2.administrator-guide/7.o-m-management/2.scale-out-and-scale-in-1/2.cluster-level-scale-out-and-scale-in/2.shrink-1/1.reduce-zone-from-cluster.md)。
+删除 Zone 通常用于集群缩容的场景中。
 
 ## 前提条件
 
-删除 Zone 前，请确认该 Zone 下已不存在节点，并且该 Zone 的状态为 `INACTIVE`，否则将会导致删除 Zone 失败。查看 Zone 状态的相关操作可参见 [查看 Zone](1.view-a-zone.md)；查看 Zone 内节点的相关操作可参见 [查看节点](2.view-an-observer.md)。
+删除 Zone 前，需要确认以下事项：
+
+1. 请确认该 Zone 下已不存在节点，查看 Zone 内节点的相关操作可参见 [查看节点](2.view-an-observer.md)。
+
+2. 请确认该 Zone 已停止。
+
+  停止 Zone 的语句如下：
+
+   ```sql
+   obclient [(none)]> ALTER SYSTEM STOP ZONE zone_name;
+   ```
+
+   其中，`zone_name` 为待停止的 Zone 的名称。每条语句每次仅支持停止一个 Zone。
+
+   示例如下：
+
+   ```sql
+   obclient [(none)]> ALTER SYSTEM STOP ZONE zone4;
+   ```
 
 ## 操作步骤
 
