--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
@@ -12,10 +12,6 @@
 
   与 `SHOW` 语句不同，通过 `GV$OB_PARAMETERS` 视图可以查看集群中的所有配置项（含隐藏配置项，即 `_xx_xx` 格式的配置项）及其所有属性描述。
 
-* 通过配置文件 `observer.config.bin` 查看集群配置项
-
-   该方式查看的配置项中仅包含了单台服务器的配置项，集群中每台服务器的配置项不完全一致。此外，通过该方式查看到的配置项信息仅包含了配置项名和配置项值，无各配置项的属性描述。不推荐使用该方式查看配置项，建议使用 `SHOW` 语句或 `GV$OB_PARAMETERS` 视图查看集群级配置项。
-
 有关配置项的更多说明，请参见 [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)。
 
 ## 通过 SHOW 语句查看集群配置项
@@ -112,31 +108,6 @@
   
   有关 `GV$OB_PARAMETERS` 视图的更多信息，请参见 [GV$OB_PARAMETERS](暂时无法加链接)。
 
-## 通过配置文件 observer.config.bin 查看集群配置项
-
-在启动 observer 进程时，如果您没有指定集群配置项，待 observer 进程启动后，系统就会使用其指定的配置项的 Default 值。在 observer 进程启动成功后，配置项值将持久化到 `/home/admin/oceanbase/etc/observer.config.bin` 文件中，您可以查看文件中的集群配置项。
-
-<main id="notice" type='explain'>
-<h4>说明</h4>
-<p>由于 <code>observer.config.bin</code> 文件为只读，您无法对文件中的配置项值进行修改。</p>
-</main>
-
-具体操作如下：
-
-1. 使用 `admin` 用户登录任意一台 OBServer。
-
-2. 通过命令行工具进入 `/home/admin/oceanbase/etc` 目录。
-
-   ```shell
-   [admin@xxx /]$ cd /home/admin/oceanbase/etc
-   ```
-
-3. 执行以下命令，查看文件中的内容。
-
-   ```shell
-   [admin@xxx etc]$ strings observer.config.bin
-   ```
-
 ## 相关文档
 
 关于集群配置项的更多内容，请参见以下信息：
@@ -145,4 +116,6 @@
 
 * [修改集群配置项](13.modify-cluster-parameters.md)
 
-有关每个配置项的详细介绍，请参见 《参考指南》 的 **系统参考** 章节。
+* [租户系统变量](暂时无法添加链接)
+
+有关每个配置项的详细介绍，请参见 [系统配置项](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)。
