--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/13.modify-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/13.modify-cluster-parameters.md
@@ -56,13 +56,13 @@
 
    * `SCOPE` 用于指定本次配置项修改的生效范围，默认值为 `BOTH`。其中：
 
-     * `MEMORY`：表示仅修改内存中的配置项，修改立即生效，且本修改在 OBServer 重启以后会失效（当前暂无配置项支持这种方式）。
+     * `MEMORY`：表示仅修改内存中的配置项，修改立即生效，且本修改在 OBServer 服务器重启以后会失效（当前暂无配置项支持该方式）。
 
-     * `SPFILE`：表示仅修改配置表中的配置项值，当 OBServer 重启以后才生效。
+     * `SPFILE`：表示仅修改配置表中的配置项值，当 OBServer 服务器重启以后才生效。
 
      * `BOTH`：表示既修改配置表，又修改内存值，修改后立即生效，且 OBServer 重启以后配置值仍然生效。
 
-   * `SERVER` 表示指定集群中要修改的 Server，`ZONE` 表示指定集群中要修改的 Zone。`ALTER SYSTEM` 语句不能同时指定 Zone 和 Server。并且在指定 Zone 时，仅支持指定一个 Zone；指定 Server 时，仅支持指定一个 Server。如果修改集群级配置项时，不指定 Zone 也不指定 Server，则表示该修改在整个集群内生效。
+   * `SERVER` 表示指定集群中要修改的 OBServer 服务器，`ZONE` 表示指定集群中要修改的 Zone。`ALTER SYSTEM` 语句不能同时指定 Zone 和 Server。并且在指定 Zone 时，仅支持指定一个 Zone；指定 Server 时，仅支持指定一个 Server。如果修改集群级配置项时，不指定 Zone 也不指定 Server，则表示该修改在整个集群内生效。
 
    在修改集群配置项时，集群级别的配置项不能通过用户租户设置，也不可以通过系统租户（即 `sys` 租户） 指定为用户租户设置。
 
@@ -70,7 +70,7 @@
 
     * `scope` 值为 `CLUSTER` 则表示为集群级别的配置项。
 
-    * `scope` 值为 `TENANT`则表示为租户级别的配置项。
+    * `scope` 值为 `TENANT` 则表示为租户级别的配置项。
 
     示例：
 
@@ -106,4 +106,6 @@
 
 * [查看集群配置项](12.view-cluster-parameters.md)
 
-有关每个配置项的详细介绍，请参见 《参考指南》 的 **系统参考** 章节。
+* [租户系统变量](暂时无法添加链接)
+
+有关每个配置项的详细介绍，请参见 [系统配置项](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)。
