--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -98,19 +98,21 @@
     1 row in set
     ```
 
-## 修改 INT 类型变量
+## 修改布尔类型变量
 
-在 `SHOW VARIABLES` 命令中显示 ON/OFF 或者 True/False 的变量，可以通过如下任意方法设置变量值：
+在 `SHOW VARIABLES` 命令中显示 ON/OFF 的变量，可以通过如下任意方法设置变量值：
 
 ```sql
-SET @@foreign_key_checks = ON;
-SET @@foreign_key_checks = 1;
+SET foreign_key_checks = ON;
+SET foreign_key_checks = TRUE;
+SET foreign_key_checks = 1;
 
-SET GLOBAL foreign_key_checks = ON;
-SET GLOBAL foreign_key_checks = 1;
+SET GLOBAL foreign_key_checks = OFF;
+SET GLOBAL foreign_key_checks = FALSE;
+SET GLOBAL foreign_key_checks = 0;
 ```
 
 <main id="notice" type='explain'>
  <h4>说明</h4>
- <p>通过 ON/OFF 或 1/0 进行 INT 类型变量的设置是等效的。</p>
+ <p>通过 ON/OFF、TRUE/FALSE 或 1/0 三种方式进行布尔类型变量的设置是等效的。</p>
 </main>
