--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
@@ -62,7 +62,8 @@
                         REPLICA_NUM=2, 
                         PRIMARY_ZONE='zone1', 
                         RESOURCE_POOL_LIST=('mq_pool_01')
-                        SET ob_tcp_invited_nodes='%';ob_compatibility_mode='oracle';
+                        SET ob_tcp_invited_nodes='%',
+                        ob_compatibility_mode='oracle';
         ```
 
    参数说明：
@@ -81,7 +82,7 @@
      </main>
 
    * RESOURCE_POOL_LIST：创建租户时的必填项，创建租户时仅支持分配一个资源池。如果需要为租户添加多个资源池，则可以待租户创建成功后通过修改租户资源池的方式再进行添加。
-   * ob_tcp_invited_nodes：用于指定租户连接的白名单，即允许哪些客户端 IP 连接该租户。如果不调整 ob_tcp_invited_nodes 的值，则默认租户的连接方式为只允许本机的 IP 连接数据库。
+   * ob_tcp_invited_nodes：用于指定租户连接的白名单，即允许哪些客户端 IP 连接该租户。示例中 `%` 表示所有客户端都可登录，如果不调整 ob_tcp_invited_nodes 的值，则默认租户的连接方式为只允许本机的 IP 连接数据库。白名单的详细介绍，参见 [查看和设置白名单](4.view-and-set-whitelist.md)。
    * ob_compatibility_mode：用于指定租户的兼容模式，可选择 MySQL 或 Oracle 兼容模式，并且只能在创建时指定。如果不指定 ob_compatibility_mode，则默认兼容模式为 MySQL 模式。
 
    `CREATE TENANT` 语句的详细说明，请参见 [CREATE TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/8.create-tenant.md)。
@@ -141,3 +142,9 @@
 * [删除租户](11.tenant-locking-and-unlocking.md)
 
 * [恢复租户](12.delete-tenant.md)
+
+您也可以尝试登录租户进行数据库使用。详细操作，请参见：
+
+* [查看和设置租户白名单](4.view-and-set-whitelist.md)
+
+* [登录租户](5.log-in-a-tenant.md)
