--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/4.view-tenant-information.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/4.view-tenant-information.md
@@ -1,10 +1,8 @@
 # 查看租户和资源信息
 
-本文介绍如何通过常用视图或结合多视图来查看租户以及资源的相关信息。
+本文介绍如何通过视图查看租户以及资源的相关信息。
 
-## 通过常用视图查看信息
-
-### 查看所有资源规格信息
+## 查看所有资源规格信息
 
 通过 `DBA_OB_UNIT_CONFIGS` 视图，可以查看所有资源规格信息。示例如下：
 
@@ -28,7 +26,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS;
 
 `DBA_OB_UNIT_CONFIGS` 视图参数详细说明，请参见 [DBA_OB_UNIT_CONFIGS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/60.oceanbase-dba_ob_unit_configs-of-mysql-mode.md)。
 
-### 查看所有的资源池信息
+## 查看所有的资源池信息
 
 通过 `DBA_OB_RESOURCE_POOLS` 视图，可以查看所有资源池信息。示例如下：
 
@@ -52,7 +50,7 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS;
 
 `DBA_OB_RESOURCE_POOLS` 视图参数详细说明，请参见 [DBA_OB_RESOURCE_POOLS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/47.oceanbase-dba_ob_resource_pools-of-mysql-mode.md)。
 
-### 查看所有租户信息
+## 查看所有租户信息
 
 通过 `DBA_OB_TENANTS` 视图，可以查看所有的租户信息，示例如下：
 
@@ -74,7 +72,61 @@ obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS;
 
 `DBA_OB_TENANTS` 视图参数详细说明，请参见 [DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
-### 查看节点的 unit 信息
+## 查看租户资源配置
+
+通过如下语句，在多个视图中查找租户资源配置信息。
+
+以查询结果中 mysql001 租户为例，`pool:conf` 列可以看到该租户的三个资源池名称和所用的资源规格名称，`unit_info` 列可以看到资源池的 unit 个数为 1 和相应的 CPU 配置为 1.5C、内存配置都是 6G。
+
+```sql
+obclient [oceanbase]> SELECT c.TENANT_ID, e.TENANT_NAME, concat(c.NAME, ': ', d.NAME) `pool:conf`,concat(c.UNIT_COUNT, ' unit: ', d.min_cpu, 'C/', ROUND(d.MEMORY_SIZE/1024/1024/1024,0), "G") unit_info
+                FROM DBA_OB_RESOURCE_POOLS c, DBA_OB_UNIT_CONFIGS d, DBA_OB_TENANTS e
+                WHERE c.UNIT_CONFIG_ID=d.UNIT_CONFIG_ID AND c.TENANT_ID=e.TENANT_ID AND c.TENANT_ID>1000
+                ORDER BY c.TENANT_ID;
++-----------+-------------+---------------------------------------------------------+-----------------+
+| TENANT_ID | TENANT_NAME | pool:conf                                               | unit_info       |
++-----------+-------------+---------------------------------------------------------+-----------------+
+|      1002 | mysql001    | pool_mysql001_zone1_okz: config_mysql001_zone1_S1_okz   | 1 unit: 1.5C/6G |
+|      1002 | mysql001    | pool_mysql001_zone2_pme: config_mysql001_zone2_S1_pme   | 1 unit: 1.5C/6G |
+|      1002 | mysql001    | pool_mysql001_zone3_jsu: config_mysql001_zone3_S1_jsu   | 1 unit: 1.5C/6G |
+|      1010 | oracle001   | pool_oracle001_zone3_exu: config_oracle001_zone3_S1_exu | 1 unit: 1.5C/6G |
+|      1010 | oracle001   | pool_oracle001_zone2_hli: config_oracle001_zone2_S1_hli | 1 unit: 1.5C/6G |
+|      1010 | oracle001   | pool_oracle001_zone1_owy: config_oracle001_zone1_S1_owy | 1 unit: 1.5C/6G |
++-----------+-------------+---------------------------------------------------------+-----------------+
+6 rows in set
+```
+
+## 查看租户的资源单元部署位置
+
+通过以下语句，查看当前已创建租户资源单元所在设备 IP 信息。
+
+在查询结果中可以看到每个租户对应的 ID 和资源所在节点的 IP。
+
+```sql
+obclient [oceanbase]> SELECT a.TENANT_NAME,a.TENANT_ID,b.SVR_IP FROM DBA_OB_TENANTS a,GV$OB_UNITS b WHERE a.TENANT_ID=b.TENANT_ID;
++-------------+-----------+----------------+
+| TENANT_NAME | TENANT_ID | SVR_IP         |
++-------------+-----------+----------------+
+| sys         |         1 | xx.xx.xx.237   |
+| META$1002   |      1001 | xx.xx.xx.237   |
+| mysql001    |      1002 | xx.xx.xx.237   |
+| META$1010   |      1009 | xx.xx.xx.237   |
+| oracle001   |      1010 | xx.xx.xx.237   |
+| sys         |         1 | xx.xx.xx.238   |
+| META$1002   |      1001 | xx.xx.xx.238   |
+| mysql001    |      1002 | xx.xx.xx.238   |
+| META$1010   |      1009 | xx.xx.xx.238   |
+| oracle001   |      1010 | xx.xx.xx.238   |
+| sys         |         1 | xx.xx.xx.218   |
+| META$1002   |      1001 | xx.xx.xx.218   |
+| mysql001    |      1002 | xx.xx.xx.218   |
+| META$1010   |      1009 | xx.xx.xx.218   |
+| oracle001   |      1010 | xx.xx.xx.218   |
++-------------+-----------+----------------+
+15 rows in set
+```
+
+## 查看节点的 unit 信息
 
 通过 `GV$OB_UNITS` 视图，可以查看所有节点的 unit 信息，示例如下：
 
@@ -108,7 +160,7 @@ obclient [oceanbase]> SELECT * FROM GV$OB_UNITS;
 
 `GV$OB_UNITS` 视图参数详细说明，请参见 [GV$OB_UNITS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/13.gv-ob_units-of-mysql-mode.md)。
 
-### 查看节点的资源分配信息
+## 查看节点的资源分配信息
 
 通过 `GV$OB_SERVERS` 视图，可以查看 OBServer 的信息，示例如下：
 
@@ -127,59 +179,3 @@ obclient [oceanbase]> SELECT * FROM GV$OB_SERVERS;
 ```
 
 `GV$OB_SERVERS` 视图参数详细说明，请参见 [GV$OB_SERVERS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/9.gv-ob_servers-of-mysql-mode.md)。
-
-## 结合多视图查看信息
-
-### 查看租户资源配置
-
-通过如下语句，在多个视图中查找租户资源配置信息。
-
-以查询结果中 mysql001 租户为例，`pool:conf` 列可以看到该租户的三个资源池名称和所用的资源规格名称，`unit_info` 列可以看到资源池的 unit 个数为 1 和相应的 CPU 配置为 1.5C、内存配置都是 6G。
-
-```sql
-obclient [oceanbase]> SELECT c.TENANT_ID, e.TENANT_NAME, concat(c.NAME, ': ', d.NAME) `pool:conf`,concat(c.UNIT_COUNT, ' unit: ', d.min_cpu, 'C/', ROUND(d.MEMORY_SIZE/1024/1024/1024,0), "G") unit_info
-                FROM DBA_OB_RESOURCE_POOLS c, DBA_OB_UNIT_CONFIGS d, DBA_OB_TENANTS e
-                WHERE c.UNIT_CONFIG_ID=d.UNIT_CONFIG_ID AND c.TENANT_ID=e.TENANT_ID AND c.TENANT_ID>1000
-                ORDER BY c.TENANT_ID;
-+-----------+-------------+---------------------------------------------------------+-----------------+
-| TENANT_ID | TENANT_NAME | pool:conf                                               | unit_info       |
-+-----------+-------------+---------------------------------------------------------+-----------------+
-|      1002 | mysql001    | pool_mysql001_zone1_okz: config_mysql001_zone1_S1_okz   | 1 unit: 1.5C/6G |
-|      1002 | mysql001    | pool_mysql001_zone2_pme: config_mysql001_zone2_S1_pme   | 1 unit: 1.5C/6G |
-|      1002 | mysql001    | pool_mysql001_zone3_jsu: config_mysql001_zone3_S1_jsu   | 1 unit: 1.5C/6G |
-|      1010 | oracle001   | pool_oracle001_zone3_exu: config_oracle001_zone3_S1_exu | 1 unit: 1.5C/6G |
-|      1010 | oracle001   | pool_oracle001_zone2_hli: config_oracle001_zone2_S1_hli | 1 unit: 1.5C/6G |
-|      1010 | oracle001   | pool_oracle001_zone1_owy: config_oracle001_zone1_S1_owy | 1 unit: 1.5C/6G |
-+-----------+-------------+---------------------------------------------------------+-----------------+
-6 rows in set
-```
-
-### 查看租户的资源单元部署位置
-
-通过以下语句，查看当前已创建租户资源单元所在设备 IP 信息。
-
-在查询结果中可以看到每个租户对应的 ID 和资源所在节点的 IP。
-
-```sql
-obclient [oceanbase]> SELECT a.TENANT_NAME,a.TENANT_ID,b.SVR_IP FROM DBA_OB_TENANTS a,GV$OB_UNITS b WHERE a.TENANT_ID=b.TENANT_ID;
-+-------------+-----------+----------------+
-| TENANT_NAME | TENANT_ID | SVR_IP         |
-+-------------+-----------+----------------+
-| sys         |         1 | xx.xx.xx.237   |
-| META$1002   |      1001 | xx.xx.xx.237   |
-| mysql001    |      1002 | xx.xx.xx.237   |
-| META$1010   |      1009 | xx.xx.xx.237   |
-| oracle001   |      1010 | xx.xx.xx.237   |
-| sys         |         1 | xx.xx.xx.238   |
-| META$1002   |      1001 | xx.xx.xx.238   |
-| mysql001    |      1002 | xx.xx.xx.238   |
-| META$1010   |      1009 | xx.xx.xx.238   |
-| oracle001   |      1010 | xx.xx.xx.238   |
-| sys         |         1 | xx.xx.xx.218   |
-| META$1002   |      1001 | xx.xx.xx.218   |
-| mysql001    |      1002 | xx.xx.xx.218   |
-| META$1010   |      1009 | xx.xx.xx.218   |
-| oracle001   |      1010 | xx.xx.xx.218   |
-+-------------+-----------+----------------+
-15 rows in set
-```
