--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/5.log-in-a-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/5.log-in-a-tenant.md
@@ -1,34 +1,25 @@
 # 登录租户
 
-创建租户后，符合白名单要求的 IP 可以登录租户创建各种数据库对象（Database、Table、用户等）。
+创建租户后，可以登录租户创建各种数据库对象（Database、Table、用户等）。
 
-## 设置白名单
+## 登录用户租户
 
-创建租户时可以指定租户的系统变量 `ob_tcp_invited_nodes` 用于指定租户连接的白名单，即允许哪些客户端 IP 连接该租户。如果不指定 `ob_tcp_invited_nodes` 的值，则默认租户的连接方式为只允许本机的 IP 连接数据库。
+使用 root 用户登录到 cluster 集群的 mysql001 租户，示例如下：
 
-租户创建完成后，可以登录 sys 租户的 root 用户，查看或者修改白名单。
+```sql
+$obclient -h172.30.xx.xx -P2883 -uroot@mysql001#cluster -p****
+```
 
-* 查看租户白名单
+参数说明：
 
-    ```sql
-    SHOW VARIABLES LIKE 'ob_tcp_invited_nodes';
-    +----------------------+-------+
-    | Variable_name        | Value |
-    +----------------------+-------+
-    | ob_tcp_invited_nodes | %     |
-    +----------------------+-------+
-    ```
+* **-h**：OceanBase 数据库连接 IP，也可以是 OBProxy 地址。
+* **-u**：租户的连接用户名，格式为 **用户@租户#集群名称**，集群的默认管理员租户是 'sys'，租户的默认管理员用户是 root。直连数据库时不填写集群名称，通过 OBProxy 连接时需要填写。
+* **-p**：用户密码。
+* **-P**：OceanBase 数据库连接端口，也是 OBProxy 的监听端口。可以自行配置，OBProxy 常用端口为 2883，直连常用端口为 2881。
 
-* 更改租户白名单
+### 本机直连登录用户租户
 
-    ```sql
-    SET GLOBAL ob_tcp_invited_nodes='%';
-    SET GLOBAL ob_tcp_invited_nodes='10.10.10.%';
-    ```
-
-## 客户端登录示例
-
-下文以只能通过本机的 IP 连接数据库为例。
+当租户连接的白名单只设置了本机地址时，则无法远程访问数据库。需要登录数据库所在节点，再通过本机地址登录用户租户。
 
 1. 使用 root 用户登录到数据库的 sys 租户。
 
@@ -59,31 +50,31 @@
     6 rows in set
     ```
 
-4. 以的 `TENANT_ID = 1010` 为条件，查询 oracle001 租户在哪些节点上有 unit。
+4. 查询 oracle001 租户在哪些节点上有 unit。
 
     ```sql
     obclient [oceanbase]> SELECT UNIT_ID,STATUS,ZONE,SVR_IP FROM dba_ob_units WHERE TENANT_ID = 1010;
     +---------+--------+-------+--------------+
     | UNIT_ID | STATUS | ZONE  | SVR_IP       |
     +---------+--------+-------+--------------+
-    |    1013 | ACTIVE | zone3 | 172.30.xx.xx |
-    |    1014 | ACTIVE | zone1 | 172.30.xx.xx |
-    |    1015 | ACTIVE | zone2 | 172.30.xx.xx |
+    |    1013 | ACTIVE | zone3 | xx.xx.xx.102 |
+    |    1014 | ACTIVE | zone1 | xx.xx.xx.103 |
+    |    1015 | ACTIVE | zone2 | xx.xx.xx.104 |
     +---------+--------+-------+--------------+
     ```
 
-5. 通过 ssh 方式登录到任一节点。
+5. 通过 ssh 方式登录节点 `xx.xx.xx.102`。
 
     ```bash
-    $ssh admin@172.30.xx.xx
-    admin@172.30.xx.xx's password:
+    $ssh admin@xx.xx.xx.102
+    admin@xx.xx.xx.102's password:
     ```
 
-6. 通过客户端登录 OceanBase 数据库。
+6. 再通过客户端登录到用户租户。
 
    示例：
 
-   * 通过 obclient 客户端登录 Oracle 兼容模式的租户。
+   * 通过 OBClient 客户端登录 Oracle 兼容模式的租户。
 
       ```bash
       $obclient -P2881 -h127.0.0.1 -usys@oracle001 -p**** -A
@@ -100,7 +91,7 @@
 
       <main id="notice" type='explain'>
        <h4>说明</h4>
-       <p>obclient 是 OceanBase 数据库的登录客户端，可以支持连接 MySQL 兼容模式租户和 Oracle 兼容模式租户。</p>
+       <p>OBClient 是 OceanBase 数据库的登录客户端，可以支持连接 MySQL 兼容模式租户和 Oracle 兼容模式租户。</p>
       </main>
 
    * 通过 MySQL 客户端登录 MySQL 兼容模式的租户。
