--- a/zh-CN/7.reference/3.system-views/3.performance-view-5/22.gv-sql_audit-3.md
+++ b/zh-CN/7.reference/3.system-views/3.performance-view-5/22.gv-sql_audit-3.md
@@ -96,8 +96,8 @@ GV$OB_SQL_AUDIT
 | USED_WORKER_COUNT       | bigint(20)          | NO             | 请求实际使用的工作线程数                                                                                                                                                                                                                                                                                                                                                                                                                 |
 | SCHED_INFO              | varchar(16384)      | YES            | 请求的调度信息                                                                                                                                                                                                                                                                                                                                                                                                                      |
 | FUSE_ROW_CACHE_HIT      | bigint(20)          | NO             | 暂不支持该字段，字段默认为 NULL                                                                                                                                                                                                                                                                                                                                                                                                           |
-| PS_CLIENT_STMT_ID      | bigint(20)          | NO             | 请求对应的 Prepare ID： <li> `-1`：表示 SQL 语句没有使用 PS 协议   <li> 非 `-1`：表示 SQL 语句使用了 PS 协议，为 PS 协议在客户端对该语句返回的唯一标志                                                                                                                                                                                                                                                                                                                                                                                                            |
-| PS_INNER_STMT_ID      | bigint(20)          | NO             | 请求对应的 Prepare ID： <li> `-1`：表示 SQL 语句没有使用 PS 协议   <li> 非 `-1`：表示 SQL 语句使用了 PS 协议，为 PS 协议在内部对该语句返回的唯一标志                                                                                                                                                                                                                                                                                                                                                                                                            |
+| PS_CLIENT_STMT_ID      | bigint(20)          | NO             | 请求对应的 Prepare ID： <ul><li> `-1`：表示 SQL 语句没有使用 PS 协议  </li><li> 非 `-1`：表示 SQL 语句使用了 PS 协议，为 PS 协议在客户端对该语句返回的唯一标志</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                           |
+| PS_INNER_STMT_ID      | bigint(20)          | NO             | 请求对应的 Prepare ID： <ul><li> `-1`：表示 SQL 语句没有使用 PS 协议   </li><li>> 非 `-1`：表示 SQL 语句使用了 PS 协议，为 PS 协议在内部对该语句返回的唯一标志</li></ul>                                                                                                                                                                                                                                                                                                                                                                                                            |
 | TX_ID      | bigint(20)          | NO             | 请求对应的事务 ID                                                                                                                                                                                                                                                                                                                                                                                                           |
 | SNAPSHOT_VERSION      | bigint(20)          | NO             | SQL语句使用的读快照版本                                                                                                                                                                                                                                                                                                                                                                                                           |
 | REQUEST_TYPE            | bigint(20)          | NO             | 请求对应的类型： <li> 0：表示非法   <li> 1：表示是一个内部请求   <li> 2：表示是一个本地请求，例如，Local 计划   <li> 3：表示远程请求   <li> 4：表示分布式请求   <li> 5：表示 SQL 的 Prepare 请求   <li> 6：表示 SQL 的 Execute Stmt 请求    |
