--- a/zh-CN/5.administrator-guide/11.operation-and-maintenance-management/2.scale-out-and-scale-in-1/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
+++ b/zh-CN/5.administrator-guide/11.operation-and-maintenance-management/2.scale-out-and-scale-in-1/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
@@ -28,7 +28,7 @@
 
 ### 背景信息
 
-假设当前集群中共包含 3 个可用区 `z1`、`z2`、`z3`，每个 Zone 内包含 3 台 OBServer。集群中有一个普通租户 `tenant1`，其资源分配情况如下：
+假设当前集群中共包含 3 个可用区 `z1`、`z2`、`z3`，每个 Zone 内包含 3 台 OBServer。在集群中创建一个普通租户 `MySQL`，其资源分配情况如下：
 
 ```sql
 obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 6, MIN_CPU 6, MEMORY_SIZE '36G', MAX_IOPS 1024, MIN_IOPS 1024, IOPS_WEIGHT=0, LOG_DISK_SIZE '2G';
