--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/1.locality-overview.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/1.locality-overview.md
@@ -14,8 +14,8 @@ replicas{量词}@location
 
 |  **元素**  |       **说明**        |
 |------------|-----------------------|
-|  replicas  | 表示副本类型。replicas 的值为副本名称，可以在 [副本介绍](../1.copy-introduction.md) 中的副本类型说明表中的名称列获得支持的值（支持全名和简写）|
-|  location  | 表示位置。它是系统已知的一组枚举值。 location 的值为 Zone 的名称。集群和租户中的各 Zone 的名称可以通过 `oceanbase.DBA_OB_ZONES` 视图查询。<br> 有关 `oceanbase.DBA_OB_ZONES` 视图的详细信息，参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/63.oceanbase-dba_ob_zones-of-mysql-mode.md)|
+|  replicas  | 表示副本类型。replicas 的值为副本名称，可以在 [副本介绍](../1.copy-introduction.md) 中的副本类型说明表中的名称列获得支持的值（支持全名和简写）。|
+|  location  | 表示位置。它是系统已知的一组枚举值。 location 的值为 Zone 的名称。集群和租户中的各 Zone 的名称可以通过 `oceanbase.DBA_OB_ZONES` 视图查询。<br> 有关 `oceanbase.DBA_OB_ZONES` 视图的详细信息，参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/63.oceanbase-dba_ob_zones-of-mysql-mode.md)。|
 |    量词    | 不指定量词的时候，表示一个副本。用 `{n}` 表示 n 个副本，一个分区在一个 Zone 中最多有一个全功能副本。|
 
 ## 示例
@@ -26,10 +26,10 @@ replicas{量词}@location
   
   表示系统租户在 `z1,z2,z3,z4,z5` 上各存在一个全能型副本。
 
-* tenant1 的 Locality： F@z1,F@z2,F,F@z3 。
+* tenant1 的 Locality： F@z1,F@z2,F@z3 。
   
   表示租户 tenant1 在 `z1,z2,z3` 上各存在一个全能型副本 。
 
-* tenant2 的 Locality： F@z3,F@z4,F,F@z5 。
+* tenant2 的 Locality： F@z3,F@z4,F@z5 。
   
   表示租户 tenant2 在 `z3,z4,z5` 上存在一个全能型副本 。
