--- a/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/6.ls-group.md
+++ b/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/6.ls-group.md
@@ -10,11 +10,11 @@
 
 因此，一个日志流属于一个日志流组，不可更改；一个日志流组绑定在一个 Unit Group 上；日志流组内所有日志流分布在对应的 Unit Group 上，日志流 Leader 打散在 Primary Zone 上。
 
-日志流组内的日志流个数随着租户 Primary Zone 配置的变化而动态变化，日志流组生命期与 Unit Group 绑定。
+日志流组内的日志流个数随着租户 Primary Zone 配置的变化而动态变化，日志流组生命周期与 Unit Group 绑定。
 
 ## 查看示例
 
-日志流，及其所归属的日志流组可通过视图 `oceanbase.CDB_OB_LS` 查看。
+日志流及其所归属的日志流组可通过视图 `oceanbase.CDB_OB_LS` 查看。
 
 有关 `oceanbase.CDB_OB_LS` 视图的详细信息，参见 [oceanbase.CDB_OB_LS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/175.oceanbase-cdb_ob_ls-of-mysql-mode.md)
 
