--- a/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/2.adjust-resource-specifications.md
+++ b/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/2.adjust-resource-specifications.md
@@ -1,4 +1,4 @@
-# 调整资源规格
+# 通过调整资源规格实现租户扩缩容
 
 对租户内资源的扩容和缩容可以通过修改租户的资源规格即 unit_config 来实现。
 
@@ -78,7 +78,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
     6 rows in set
     ```
 
-根据查询结果，如果当前租户对应的 UNIT_CONFIG_ID 与其他租户相同，则表示有多个租户使用了相同的资源规；
+根据查询结果，如果当前租户对应的 UNIT_CONFIG_ID 与其他租户相同，则表示有多个租户使用了相同的资源规格；
 
 如果当前租户中对应的 UNIT_CONFIG_ID 与其他租户均不相同，则表示该租户使用了独立的资源规格，例如租户 mq_t1 所对应的 UNIT_CONFIG_ID 与其他租户的都不一样，所以租户 mq_t1 使用了独立的资源规格。
 
