--- a/zh-CN/6.manage/3.replica-management/3.flow-distribution.md
+++ b/zh-CN/6.manage/3.replica-management/3.flow-distribution.md
@@ -1,6 +1,6 @@
 # 流量分布
 
-本文介绍什么是流量分布。
+在 OceanBase 里面，Leader 承担事务中的读写请求，因此每个分区 Leader 的分布决定了流量在每个节点上的分布。
 
 流量分布通过 Primary Zone 来描述，描述了 Leader 副本的偏好位置，即 Primary Zone 决定了 OceanBase 数据库的流量分布。
 
@@ -8,11 +8,11 @@
 
 Primary Zone 实际上是一个 Zone 的列表，列表中包含多个 Zone。该列表用如下方式为 Zone 配置优先级：
 
-当 Primary Zone 列表包含多个 Zone 时，用 ';' 分隔的具有从高到底的优先级；用 ',' 分隔的具有相同优先级，表示流量打散在多个 Zone 上，这几个Zone同时提供服务。
+当 Primary Zone 列表包含多个 Zone 时，用 ';' 分隔的具有从高到底的优先级；用 ',' 分隔的具有相同优先级，表示流量打散在多个 Zone 上，这几个 Zone 同时提供服务。
 
 例如：`'hz1,hz2;sh1,sh2;sz1'` 表示 `hz1` 和 `hz2` 具有相同的优先级，并且优先级高于 `sh1/sh2` 和 `sz1`；`sh1` 和 `sh2` 具有相同优先级，并且优先级高于 `sz1`。
 
-OceanBase4.0 仅支持租户级别的 Primary Zone，不再支持表级、DB级、Tablegroup 级配置 Primary Zone 。如果创建租户时未指定 primary_zone，默认填写为 RANDOM，表示各个 Zone 优先级相同。
+OceanBase 4.0 仅支持租户级别的 Primary Zone，不再支持表级、DB 级、Tablegroup 级配置 Primary Zone 。如果创建租户时未指定 primary_zone，默认填写为 RANDOM，表示各个 Zone 优先级相同。
 
 ## Region 属性
 
