--- a/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/4.adjust-primary-zone.md
+++ b/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/4.adjust-primary-zone.md
@@ -2,9 +2,7 @@
 
 本文介绍如何通过修改 Primary Zone ，达到租户扩容的功能。
 
-## 操作步骤
-
-### 增加 primary_zone
+## 增加 primary_zone
 
 1. 使用 root 用户登录到数据库的 sys 租户。
 
@@ -47,7 +45,7 @@
     6 rows in set
    ```
 
-5. 查询租户 mq_t1 的日志流信息，对应 `unit num` 为 2 和 `primary zone` 为 1，因此 日志流个数为 2。
+5. 查询租户 mq_t1 的日志流信息，对应 `unit num` 为 2 和 `primary zone` 为 1，因此日志流个数为 2。
 
    ```sql
     obclient> SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
@@ -112,4 +110,4 @@
     5 rows in set
    ```
 
-通过上述示例，将租户 mq_t1 的 Primary Zone 的 Zone 个数从 1 变更为 2 。变更前租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 2；变更后租户在每个 Zone 的 Unit 个数保持不变，但 Primary Zone 个数 从 1 变更为 2，从而对应的日志流个数变更为 4 。变更后租户的服务节点从 2 扩容为 4 ，从而实现了租户扩容。
+通过上述示例，将租户 mq_t1 的 Primary Zone 的 Zone 个数从 1 变更为 2 。变更前租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 2；变更后租户在每个 Zone 的 Unit 个数保持不变，但 Primary Zone 个数从 1 变更为 2，从而对应的日志流个数变更为 4 。变更后租户的服务节点从 2 扩容为 4 ，从而实现了租户扩容。
