--- a/zh-CN/7.reference/4.system-variables/74.ob_enable_show_trace-1-2-3.md
+++ b/zh-CN/7.reference/4.system-variables/74.ob_enable_show_trace-1-2-3.md
@@ -2,9 +2,9 @@
 #docslug#/oceanbase-database/oceanbase-database/V4.0.0/ob_enable_show_trace-1-2-3
 ob_enable_show_trace 用于设置是否开启 show trace 功能。
 
-<main id="notice" type='notice'>
- <h4>注意</h4>
- <p><code>show trace</code> 功能暂不支持。</p>
+<main id="notice" type='explain'>
+ <h4>说明</h4>
+ <p><code>show trace</code> 功能在 4.0 版本暂不支持，4.1 版本支持。</p>
 </main>
 
 | **属性**  |                                                   **描述**                                                   |
