--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/6.truncate-partition-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/6.truncate-partition-of-oracle-mode.md
@@ -12,7 +12,7 @@ OceanBase 数据库的 Oracle 模式中：
 
 OceanBase 数据库的 Oracle 模式中，一级分区表和二级分区表对 Truncate 分区操作的具体支持情况如下表所示。
 
-|                       分区表                       || Truncate 一级分区 | Truncate 二级分区 |
+| 分区表 |     分区类型                   | Truncate 一级分区 | Truncate 二级分区 |
 |-------|------------------------------------------|---------------|---------------|
 | 一级分区表 | Range / List                             | 支持            | -             |
 | 一级分区表 | Hash                                     | 不支持           | -             |
