根据沈炼的补充结果更新文档

--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/3.restart-a-node.md
@@ -1,11 +1,23 @@
 # 重启节点
 
-重启是常用运维动作之一。重启节点可以解决对机器进行短暂维修的场景（节点下线时间需要在 `server_permanent_offline_time` 以内，否则会导致节点被永久下线）。如果长时间维修，需要走机器替换流程，有关机器替换的详细操作请参见 [替换节点](7.replace-a-node.md)。
+重启是常见运维动作之一，适用于对机器进行短暂维修，以及修改系统配置项后需要重启生效的场景。重启过程中节点的下线时间需要在配置项 `server_permanent_offline_time` 设置的时间以内，否则会被永久下线。如果机器长时间维修，需要走机器替换流程，有关机器替换的详细操作请参见 [替换节点](7.replace-a-node.md)。
 
 <main id="notice" type='explain'>
 <h4>说明</h4>
 <p>集群级配置项 <code>server_permanent_offline_time</code> 用于设置节点心跳中断的时间阈值，即节点心跳中断多久后认为其被永久下线，永久下线的节点上的数据副本需要被自动补足。默认为 3600s。有关该配置项的更多详细信息，请参见 <a href="../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items-1/190.server_permanent_offline_time-1-2-3.md">server_permanent_offline_time</a>。</p>
 </main>
+
+## 背景信息
+
+OceanBase 数据库作为一款分布式数据库，典型的部署架构为多副本部署（例如，同城三中心部署架构为 3 份副本，三地五中心部署架构为 5 份副本）。事务提交时利用 Paxos 协议在多个副本间达成多数派提交，从而维护副本之间的数据一致性，在少数派副本异常的情况下达成 RPO=0 的 SLA。
+
+`STOP SERVER` 命令在多副本架构的基础上能够达到业务无损的重启效果，`STOP SERVER` 命令执行以下逻辑：
+
+1. 将待重启节点上的 Leader 全部切走，并保证除了重启节点以外的其他节点上的副本满足多数派。
+
+2. 在 RootService 上将待重启节点标记为 stopped（节点状态为 `ACTIVE` 状态且 `stop_time` 字段大于 0），客户端识别后，不会将业务请求路由到该节点。
+
+最终成功 Stop Server 后，重启节点不会引起无主选举及客户端报错等问题，对业务流量完全透明。如果 Stop Server 操作执行失败，需要停止重启并检查原因，例如，可能出现的原因有缺少副本、RedoLog 延迟、总投票成员数小于 3 等。
 
 ## 操作步骤
 
