--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
@@ -1,6 +1,14 @@
 # 添加节点
 
-当集群中的资源不够时，您可以通过添加节点来扩容。
+可以向 OceanBase 集群中添加节点，添加节点适用于弹性扩容场景和调整部署场景。
+
+* 弹性扩容场景：扩容后，Zone 内有更多的节点容纳 Unit，从而可以执行后续的迁移 Unit、调整租户的 `UNIT_NUM`、新建租户等操作。
+
+* 调整部署场景：调整部署场景，包括将集群的部署方式从同城三中心调整为三地五中心，以及机房裁撤场景下将 Zone 从一个机房搬迁到另一个机房。该场景需要先增加 Zone，再在该 Zone 内增加节点，然后调整租户的 Locatity 属性。
+
+OceanBase 数据库的弹性扩容能力相比于传统数据库具有明显的技术优势。传统数据库的数据存放于一台机器上，而 OceanBase 数据库能够把数据打散到不同机器，从而能够解决可扩展性的问题，真正体现出分布式架构的优势。当集群或者租户的容量不足时，只需要增加更多的节点，集群就能够容纳更多的租户，租户也能够容纳更多的数据和业务流量。同样，在集群或者租户的容量富余时，也可以将节点下线，从而降低成本。
+
+多副本部署能力同样是 OceanBase 数据库相比于传统数据库的技术优势，多副本部署能力是 OceanBase 数据库具备多级无损容灾能力的基础，包括单机级无损容灾、机房级无损容灾、城市级无损容灾等能力。此外，OceanBase 数据库支持灵活地调整集群部署架构，从而可以满足业务场景的技术演进。
 
 ## 前提条件
 
@@ -214,6 +222,7 @@
    ```
 
    列表中有刚刚添加的 OBServer 服务器，则表示添加成功。
+
 
 ## 相关文档
 
