--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -1,6 +1,10 @@
 # 删除节点
 
-可以通过 Delete Server 操作来删除节点。删除节点是添加节点的逆操作。
+可以向 OceanBase 集群中删除节点，删除节点是添加节点的逆向操作，适用于弹性缩容场景和调整部署场景。
+
+* 弹性缩容场景：集群中有资源富余时，可以通过调整 Unit 分布、缩减租户的 `UNIT_NUM` 等操作来减少节点的资源占用，并最终通过删除节点来下线机器。
+
+* 调整部署场景：调整集群的部署架构时，如果调整租户的 Locality 属性后使得某 Zone 内不再分布有任何租户的 Unit，可以通过 Stop Zone ->  Delete Server -> Delete Zone 等一系列操作下线该 Zone。
 
 ## 背景信息
 
