--- a/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/1.use-mydumper-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/1.use-mydumper-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -1,6 +1,6 @@
-# 使用 MySQLDumper 从 MySQL 数据库迁移数据到 OceanBase 数据库
+# 使用 MyDumper 从 MySQL 数据库迁移数据到 OceanBase 数据库
 
-MySQLDumper 是 MySQL 提供的用于导出 MySQL 数据库对象和数据的工具，非常方便。OceanBase 数据库兼容 MySQL 协议，您可以使用 MySQLDumper 对 OceanBase 数据库中的数据进行备份。MySQLDumper 是 MySQL 自带的逻辑备份工具。它的备份原理是通过协议连接到数据库后，将需要备份的数据查询出来，并将查询出的数据转换成对应的 INSERT 语句。当您需要还原这些数据时，只要执行这些 INSERT 语句，即可将对应的数据还原。
+MyDumper 是 MySQL 提供的用于导出 MySQL 数据库对象和数据的工具，非常方便。OceanBase 数据库兼容 MySQL 协议，您可以使用 MyDumper 对 OceanBase 数据库中的数据进行备份。MyDumper 是 MySQL 自带的逻辑备份工具。它的备份原理是通过协议连接到数据库后，将需要备份的数据查询出来，并将查询出的数据转换成对应的 INSERT 语句。当您需要还原这些数据时，只要执行这些 INSERT 语句，即可将对应的数据还原。
 
 ## 建议版本
 
